# GPUEngine-Effects-DemoApp

./: .gitignore  CMakeLists.txt
CMakeModules/: CreateStandAlone.cmake  DeployQt5.cmake
resources/models/: ship.mtl
resources/shaders/: laser_fs.glsl  laser_gs.glsl  laser_vs.glsl  red_fs.glsl  shield_fs.glsl  shield_vs.glsl  simple_fs.glsl  simple_vs.glsl  skybox_fs.glsl  skybox_gs.glsl  skybox_vs.glsl  test_fs.glsl  test_vs.glsl  testing_fs.glsl  testing_vs.glsl
src/: CMakeLists.txt
src/core/: GERendererBase.h  QuickRendererBase.cpp  Renderer.cpp  Renderer.h  SceneLoader.cpp  SceneLoader.h  main.cpp
src/glsg/: EnumToGL.cpp  EnumToGL.h  GLAttribute.h  GLScene.h  GLSceneProcessor.cpp  GLSceneProcessor.h  TextureFactory.cpp  TextureFactory.h
src/graphics/: LaserManager.cpp  LaserManager.h  MissileManager.h  ShieldManager.cpp  ShieldManager.h  SimpleVT.cpp  SimpleVT.h  VisualizationTechnique.h
src/graphics/skybox/: SkyboxVT.cpp  SkyboxVT.h
src/graphics/testing/: TestingVT.cpp  TestingVT.h
src/intersectors/: LineSphereIntersector.cpp
src/sg/: AnimationChannel.h  AnimationEvent.h  AnimationEventChannel.cpp  AnimationEventChannel.h  AnimationManager.cpp  AnimationManager.h  CubeMapTexture.cpp  CubeMapTexture.h
src/sg/SceneGraph/: Transform.cpp  Transform.h
src/util/: Algorithm.h  MouseEventHandler.cpp  SceneLoader.cpp  Stopwatch.h  Timer.h
src/util/collision/: Collider.h  Collision.h  LaserShieldCollider.cpp  LaserShieldCollider.h  LaserShieldCollision.cpp  LaserShieldCollision.h
src/util/intersectors/: LineSphereIntersector.cpp  LineSphereIntersector.h
